update html files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,9 +11,9 @@
     <div>
         <h1>Наша команда</h1>
         <h3>Ми активні студенти, одногрупники, та просто любителі джави та спрінга. Для нас немає перешкод, ми можемо зробити все, треба тільки трішки подумати :)</h3>
-        <a class="main" href="arsenInfo.html">Нерода Арсен</a>
-        <a class="main" href="romanInfo.html">Водзінський Роман</a>
-        <a class="main" href="dmytroInfo.html">Возниця Дмитро</a>
+        <a class="main" href="team/arsen">Нерода Арсен</a>
+        <a class="main" href="team/roma">Водзінський Роман</a>
+        <a class="main" href="team/dima">Возниця Дмитро</a>
     </div>
 </body>
 </html>
